	* removed some painful global debug code in Profile::Multi::trim()
	* made default eps=0 more consistent (dcdb-query.perl, DiaColloDB::profileOptions(), Profile::compile_xyz())
	* added Profile::compile_clean() method as workaround for infinite score values (JSON module inserts e.g. '-inf', but browser can't parse it)
	* fixed list-client global trimming
	* added DiaColloDB::Client::dbOptions() hack to pass down logXYZ options through rcfile:// and list:// client-URLs

v0.12.003 Wed, 01 Mar 2017 15:47:02 +0100 moocow
	* fixed default match-id =2 in ddc groupby

v0.12.002 Mon, 27 Feb 2017 10:44:04 +0100 moocow
	* fixed f1 acquisition bug when using DDC back-end for "macro-event" diffs using e.g. -groupby='[@constant]'

v0.12.001 Tue, 24 Jan 2017 15:01:24 +0100 moocow
	* made profile parameter N dependent on epoch size (fixes mantis bug #17036)
	* adapted Profile::Multi::sumover() to heuristically guess whether to sum sub-profile N for diacollo <= v0.11 compatibility
	* reverse-order from DDC::PP Descendants() fixed in DDC::Concordance v0.33

v0.11.002 Wed, 30 Nov 2016 15:38:39 +0100 moocow
	* fixed bogus repsitory in Makefile.PL
	* fixed meta-attribute parsing "doc.ATTR", "doc.ATTR=VAL" for native query syntax
	* fixed buglet calling DDC::Any::Object::new() with temporary $1 argument (quote it to save it)
	* TODO: figure out why DDC::PP Descendants() returns in reverse order vs. DDC::XS::Descendants() (--> diacollo item tuple order)

v0.11.001 Tue, 20 Sep 2016 14:14:18 +0200 moocow
	* added DiaColloDB::Relation::extend() and wrappers DiaColloDB::extend(), DiaColloDB::Client::extend()
	  - high-level interface to independent f2 acquisition, e.g. for list-clients
	  - DDC-relation extend() support still experimental: large batch queries can cause server to choke
	* fixed Client::list incorrect f2 acquisition bug
	* added support for parallel sub-client processing in Client::list (requires 'forks' module)